# colour_project

./: .gitignore  CCTFExps.ipynb  CCexps.ipynb  Hist_matching.ipynb  InitialColourExps.ipynb  README.md  RegressorExps.ipynb  Untitled-1.ipynb  gamma_correction_test.ipynb  hist_matching_methods.ipynb  parser.ipynb  parser5.ipynb  pyproject.toml  regressors.py
palette/: parser.ipynb  parser_Cold_Calib_Polaris_Scan3.ipynb  parser_Hnew_Calib_R1_10_10_10.ipynb  parser_Hold_HEjul23.ipynb  parser_Hold_IHCjul23.ipynb  parser_pipeline.ipynb
src/colour_lib/circle_process/: circlelib.py  rawparser.py
src/colour_lib/palette_parser/: DetectCircles.py  DetectRectangles.py  ImageAlignment.py  ImageProcessing.py  ObjectColor.py  ObjectDetection.py
src/colour_lib/regressors/: AbstractRegressor.py  LassoRegressor.py  PLSregressor.py  StackedRegressor.py  ThinPlateSpline.py  VoteRegressor.py  __init__.py
src/colour_lib/utils/: CustomCCTF.py  Metrics.py  __init__.py  circlelib.py  rawparser.py
